ajout loader + icones right links

--- a/app/views/layouts/_settingsMenu.html.erb
+++ b/app/views/layouts/_settingsMenu.html.erb
@@ -19,9 +19,14 @@
    
     
 
-      <%= link_to list_path do%> TOUTES LES BOUTIQUES <%end%> 
+      <%= link_to list_path do%> TOUTES LES BOUTIQUES <i class="fa fa-angle-right"></i><%end%> 
       <hr class="style13">
-      <a> Plus à venir ;) <a>
+      <%= link_to do%> PLUS A VENIR <%end%> 
+<!-- Loader -->
+      <div id="loader-wrapper">
+          <div id="loader"></div>
+      </div>
+
     
       
       
