--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -19,29 +19,31 @@ errorHandler = () => {
 $(document).ready(function() {
   if(navigator.geolocation) {
     navigator.geolocation.getCurrentPosition(getLocation, errorHandler);
-  d = document.createElement("button");
-  $(d).addClass("imhere");
-  i = document.createElement("i");
-  $(i).addClass("fa fa-crosshairs");
-  $(d).html("Géocalise-moi  ");
-  $(i).appendTo($(d));
-  $(d).appendTo($("div.form-modale"));
+    d = document.createElement("button");
+    $(d).addClass("imhere");
+    i = document.createElement("i");
+    $(i).addClass("fa fa-crosshairs");
+    $(d).html("Géocalise-moi  ");
+    $(i).appendTo($(d));
+    $(d).appendTo($("div.form-modale"));
     $(d).click(function() {
-  navigator.geolocation.getCurrentPosition(getLocation, errorHandler);
-  $.ajax({url: "/imhere", type: 'POST', data: 'long=' + userLoc[1] + '&lati=' + userLoc[0], dataType: 'JSON', complete: (function(data) {
-    let local = data.responseJSON.rendu;
-    $("input#address").val(local);
-  })
-  });});
+      navigator.geolocation.getCurrentPosition(getLocation, errorHandler);
+      $.ajax({url: "/imhere", type: 'POST', data: 'long=' + userLoc[1] + '&lati=' + userLoc[0], dataType: 'JSON', complete: (function(data) {
+        let local = data.responseJSON.rendu;
+        $("input#address").val(local);
+      })
+      });});
   } 
   else {
     alert('Votre navigateur ne prend malheureusement pas en charge la géolocalisation.');
   }
 });
 
-
 // cette fonction sert à charger les lieux qui sont present à l'endroit ou l'utilisateur regarde la carte
 masuperfonction = function() {
+  if (mymap._zoom < 9) {
+  return (0);
+  }
   bound = mymap.getBounds();
   $.ajax({url: "/", type: 'POST', data: 'Nlat=' + bound.getNorth() + "&Nlong=" + bound.getWest() + "&Slat=" + bound.getSouth() + "&Slong=" + bound.getEast() + '&test1=' + mymap.getCenter().lat + '&test2=' + mymap.getCenter().lng  , dataType: 'JSON', body: 'rendu', complete: ( 
     function(data) {
@@ -53,7 +55,7 @@ masuperfonction = function() {
           let marker = new L.Marker(place, {icon: myIcon, autoPan: true});
           marker.bindPopup( '<p>' + '' + `${local.name}` + '<br />' + ''  + `${local.address}` + '</p>');
           $(marker).click(function() {
-          this.openPopup();
+            this.openPopup();
           });
           marker.addTo(mymap);
         }}})});}
@@ -69,7 +71,7 @@ layer = L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access
   maxZoom: 15,
   transparent: true,
   id: 'mapbox.streets',
-  accessToken: 'pk.eyJ1IjoiYmZyYWlraW4iLCJhIjoiY2podWxwc21pMG5udjNqdDZpZGluaGhxeSJ9.WaMLYylJhk6ULiaGSWNuAA',
+  accessToken: 'pk.eyJ1IjoiYmZyYWlraW4iLCJhIjoiY2podWxwc21pMG5udjNqdDZpZGluaGhxeSJ9.WaMLYylJhk6ULiaGSWNuAA'
 }).addTo(mymap);
 /* -------------------------------------------------------------------   */
 
