--- a/app/views/layouts/_modale.html.erb
+++ b/app/views/layouts/_modale.html.erb
@@ -1,17 +1,28 @@
 <!-- bouton add -->
 <!-- DEBUT FENETRE MODALE -->
 <div id="modal-add-shop" style="display:none;">
-<%= render 'layouts/closecross'%>    
+  <%= render 'layouts/closecross'%>    
   <div class="form-modale">
     <h2>Ajouter une boutique</h2>
     <hr class="style13">
-      Nom de la boutique: </br> <%= text_field_tag(:name, '', placeholder: 'Nom de la boutique') %> <br>
-      <!-- Description de la boutique: <br> <%= text_area_tag(:description, nil, placeholder: 'Description')%> <br> 
+    Nom de la boutique: </br> <%= text_field_tag(:name, '', placeholder: 'Nom de la boutique') %> <br>
+    <!-- Description de la boutique: <br> <%= text_area_tag(:description, nil, placeholder: 'Description')%> <br> 
       MISE DE COTE AU CAS OU DE BESOIN D'AJOUT DESCRIPTION
-      -->
-      Adresse de la boutique: </br> <%= text_field_tag(:address, nil, placeholder: "Saisir l\'adresse") %> <br>
-      <%= submit_tag"Ajouter", :class => "add_places", :id => "add", :style => "width:30%;" %>
+    -->
+    Adresse de la boutique: </br> <%= text_field_tag(:address, nil, placeholder: "Saisir l\'adresse") %> <br>
+    <div> Ajouter des tags <br>
+      <div class="control-group">
+        <%=  @tagi.each do |coucou| %>
+          <label class="control control-checkbox">
+            <%=  coucou.name %>
+            <input type="checkbox" checked="checked" id="<%= coucou.id  %>"/><div class="control_indicator"></div>
+          </label>
+        <% end %>
+      </div>
+    </div>
+    <%= submit_tag"Ajouter", :class => "add_places", :id => "add", :style => "width:30%;" %>
   </div>
+
 </div>
 
 <!-- FIN DE LA FENETRE MODALE -->
