--- a/app/views/layouts/_modale.html.erb
+++ b/app/views/layouts/_modale.html.erb
@@ -12,7 +12,7 @@
     Adresse de la boutique: </br> <%= text_field_tag(:address, nil, placeholder: "Saisir l\'adresse") %> <br>
     <div> Ajouter des tags <br>
       <div class="control-group">
-        <%=  @tagi.each do |coucou| %>
+        <%  @tagi.each do |coucou| %>
           <label class="control control-checkbox">
             <%=  coucou.name %>
             <input type="checkbox" checked="checked" id="<%= coucou.id  %>"/><div class="control_indicator"></div>
