--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -23,7 +23,7 @@ $(document).ready(function() {
     $(d).addClass("imhere");
     i = document.createElement("i");
     $(i).addClass("fa fa-crosshairs");
-    $(d).html("Géocalise-moi  ");
+    $(d).html("Ici  ");
     $(i).appendTo($(d));
     $(d).appendTo($("div.form-modale"));
     $(d).click(function() {
