--- a/app/views/layouts/_modale.html.erb
+++ b/app/views/layouts/_modale.html.erb
@@ -3,19 +3,18 @@
 <div id="modal-add-shop" style="display:none;">
   <%= render 'layouts/closecross'%>    
   <div class="form-modale">
-    <h2>Ajouter une boutique</h2>
+    <h3>Ajouter une boutique</h3>
     <hr class="style13">
-    Nom de la boutique: </br> <%= text_field_tag(:name, '', placeholder: 'Nom de la boutique') %> <br>
+     <!-- Nom de la boutique: </br>--> <%= text_field_tag(:name, '', placeholder: 'Nom de la boutique') %> <br>
     <!-- Description de la boutique: <br> <%= text_area_tag(:description, nil, placeholder: 'Description')%> <br> 
       MISE DE COTE AU CAS OU DE BESOIN D'AJOUT DESCRIPTION
     -->
-    Adresse de la boutique: </br> <%= text_field_tag(:address, nil, placeholder: "Saisir l\'adresse") %> <br>
-    <div> Ajouter des tags <br>
+    <!-- Adresse de la boutique:  </br>--> <%= text_field_tag(:address, nil, placeholder: "Saisir l\'adresse") %> <br>
       <div class="control-group">
-        <%  @tagi.each do |coucou| %>
+        <%  @tagi.each do |cat| %>
           <label class="control control-checkbox">
-            <%=  coucou.name %>
-            <input type="checkbox" checked="checked" id="<%= coucou.id  %>"/><div class="control_indicator"></div>
+            <%=  cat.name %>
+            <input type="checkbox" id="<%= cat.id  %>"/><div class="control_indicator"></div>
           </label>
         <% end %>
       </div>
