prod auto depuis branche front

--- a/app/views/pages/created.html.erb
+++ b/app/views/pages/created.html.erb
@@ -10,8 +10,8 @@
 
       <%= javascript_include_tag "place" %>
       <div id="list_show">
-        <i class="fa fa-location-arrow"></i>
-        <h3>Vous avez 0 boutique enregistrée :( <br><br>
+      <h3>Oh non :(</h3>
+        <h3>Vous avez 0 boutique enregistrée <br><br>
           <%= link_to 'Ajouter une boutique', '/', class: "button-green" %> </h3>
         <br>
       </div>
@@ -26,13 +26,13 @@
 
       <% current_user.place_createds.reverse_each do |fiche| %>
         <div id="list_show">
-          <i class="fa fa-bookmark"></i>
+          
 
             <h3><%= fiche.name %> </h3>
             <hr>
             <p>Adresse : <%= fiche.address %> </p>
              <!--%= link_to 'Modifier', edit_path, class: "button-orange"%-->
-            <%= link_to 'Supprimer', '/place/' + fiche.id.to_s,  method: :delete, class: "button-red", data: {confirm: 'Tu es sûr.e ?'} %> </p>
+            <%= link_to '/place/' + fiche.id.to_s,  method: :delete, class: "button-red", data: {confirm: 'Tu es sûr.e ?'}   do %> Supprimer <%end%></p>
 
         </div>
       <%end%>
