--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -6,7 +6,7 @@ getLocation = (position) => {
   localisable = true;
   mymap.setView([userLoc[0],userLoc[1]], 15);
   let place = new L.latLng(userLoc[0], userLoc[1]);
-  let myIcon = new L.icon({ iconUrl: "<%= asset_path("utilisateur.png") %>" , iconSize: [60, 60] });
+  let myIcon = new L.icon({ iconUrl: "<%= asset_path("utilisateur_dot.png") %>" , iconSize: [15, 15] });
   let marker = new L.Marker(place, {icon: myIcon, autoPan: true});
   marker.addTo(mymap);
 }
