--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -296,9 +296,9 @@ input[type=submit] {
     color: white;
     background-color: #c0392b;
     height: 40px;
-    margin-bottom: 10px;
     padding: .3em 2em .20em;
     text-shadow: 0 1px 1px rgba(0,0,0,.3); box-shadow: 0 1px 2px rgba(0,0,0,.2);
+    margin-left:10px;
 }
 
 
