--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -4,7 +4,7 @@
   <button class="add" onclick="toggleModal()"><i class="fa fa-plus"></i></button>
   <% @places_count = current_user.place_createds.count  %>
   <% if @places_count == 0%>
-    <span id="infobulle"><b><%= current_user.username.capitalize%></b>, tu n'as aucune boutique :( <br> Ajoutes-en une  utilisant <i class="fa fa-plus-circle" style="font-size:30px;color:rebeccapurple;"></i></span>
+    <span id="infobulle"><b><%= current_user.username.capitalize%></b>, tu n'as aucune boutique :( <br> Ajoutes-en une en utilisant <i class="fa fa-arrow-right" style="font-size:20px;"></i></span>
   <%else%>
   <%= @places_count %>
   <%end%>
