très beau overlayyyy

--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -315,51 +315,76 @@ input[type=submit] {
 
 /****** VIEWSHOP *****/
 
-#modal-view-shop{
-    position: fixed;
-    background-color: white;
-    border-radius: 10px;
-    margin-top: 150px;
-    margin-left: 4px;
-    max-width: 100%;
-    min-width: 98%;
-    z-index: 5;
-    -webkit-box-shadow: 6px 7px 5px 0px rgba(0,0,0,0.36);
-    -moz-box-shadow: 6px 7px 5px 0px rgba(0,0,0,0.36);
-    box-shadow: 6px 7px 5px 0px rgba(0,0,0,0.36);
-    color:rgba(47, 18, 76, 0.9);
-    display: block;
-    padding-top: 30px;
-    text-align: center;
-    height:auto;
-    .close-view-shop{
-        top: -20px!important;
-        
-    }
-    
+/* The side navigation menu */
+.sidenav {
+    margin-top: 60px;
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1000; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: -17px;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
 }
 
-    textarea{
-        height: 60px;
-        border: none;
-        border-width:1px;  
-        border-bottom-style:ridge;
-        border-color: $main-color;
-        width:80%;
-        margin-bottom: 20px;
-        line-height: 4;
-    }
 
-@media screen and (min-width: 801px) {
-    #modal-view-shop { 
-        min-width:800px!important;
-        margin-left: 20%;
-        margin-top: 17%;
-        height: auto;
-     }  
-  }
+/* The navigation menu links */
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav h1 {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav p {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
 
 
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {margin-top: 0px;}
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+@media screen and (max-height: 800px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
 
 /****** MENU DEROULANT USER ******/
 .user-menu
