super beau overlay

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -70,6 +70,7 @@ masuperfonction = function() {
             }
             else {
               $(i).html("Nom :");
+              $(i).attr('id', 'name_id');
               $(l).html(local.name); 
               $(j).html("Adresse :");
               $(m).html(local.address);
