bouton géoloc replaced

--- a/app/views/layouts/_modale.html.erb
+++ b/app/views/layouts/_modale.html.erb
@@ -19,7 +19,10 @@
         <% end %>
       </div>
     </div>
-    <%= submit_tag"Ajouter", :class => "add_places", :id => "add", :style => "width:30%;" %>
+    <br>
+    <div id="tags">
+      <%= submit_tag"Ajouter", :class => "add_places", :id => "add", :style => "width:30%;" %>
+    </div>
   </div>
 
 </div>
