--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -25,7 +25,7 @@ $(document).ready(function() {
     $(i).addClass("fa fa-crosshairs");
     $(d).html("Ici  ");
     $(i).appendTo($(d));
-    $(d).appendTo($("div.form-modale"));
+    $(d).appendTo($("div#tags"));
     $(d).click(function() {
       navigator.geolocation.getCurrentPosition(getLocation, errorHandler);
       $.ajax({url: "/imhere", type: 'POST', data: 'long=' + userLoc[1] + '&lati=' + userLoc[0], dataType: 'JSON', complete: (function(data) {
