--- a/app/assets/stylesheets/flatui.scss
+++ b/app/assets/stylesheets/flatui.scss
@@ -22,6 +22,9 @@
          margin-top: 90px;
       }  
 }
+.cc-revoke, .cc-window{
+    z-index:9999999!important;
+}
 /*******************************/
         /* LINKS */
 /*******************************/
