--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -26,6 +26,12 @@ z-index:1;
   margin-left:20px;
   position:fixed;
 }
+.leaflet-container .leaflet-control-attribution {
+  background: #fff;
+  background: rgba(255, 255, 255, 0.7);
+  margin: 0;
+  display: none;
+}
 /*******************************/
 /* MEDIA QUERIES */
 /*******************************/
