--- a/app/views/pages/list.html.erb
+++ b/app/views/pages/list.html.erb
@@ -8,9 +8,9 @@
       <div id="list_show">
 
         <% if @ids.include?(fact.id) %>
-          <i class="fa fa-heart" id="fav" onclick="tamer(<%= fact.id %>, <%= current_user.id %>)" style="color: rgb(255,0,0);" ></i>
+          <i class="fa fa-heart" id="fav" onclick="favorite(<%= fact.id %>, <%= current_user.id %>)" style="color: rgb(255,0,0);" ></i>
         <% else %>
-          <i class="fa fa-heart" id="fav" onclick="tamer(<%= fact.id %>, <%= current_user.id %>)" style="color: rgb(128,128,128);" ></i>  
+          <i class="fa fa-heart" id="fav" onclick="favorite(<%= fact.id %>, <%= current_user.id %>)" style="color: rgb(128,128,128);" ></i>  
         <%end %>
         <h3><%=fact.name%></h3>
         <hr>
