--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -9,6 +9,7 @@
   <%= @places_count %>
   <%end%>
 <%end%>
+<button id="maj-position" onclick="majposition();"><i class="fa fa-location-arrow"></i>  </button>
 
 <%= render 'layouts/modale'%>
  
@@ -18,4 +19,5 @@
 
 <%= javascript_include_tag "map" %>
 <%= javascript_include_tag "place" %>
+
 
