--- a/app/views/pages/category.html.erb
+++ b/app/views/pages/category.html.erb
@@ -1,10 +1,33 @@
 <%= render 'layouts/navbar'%>
-<div class="control-group">
-        <%  @tagi.each do |cat| %>
-          <label class="control control-checkbox">
-            <%=  cat.name %>
-            <input type="checkbox" id="<%= cat.id  %>"/><div class="control_indicator"></div>
-          </label>
-        <% end %>
+
+
+        <div class="wrap-list">
+    <div id='liste'>
+      <%= image_tag("photos/purple(2).jpg", class: "img-bg") %>
+      <div id="list_show">
+      <h1 align="center">Rechercher par catégories</h1>
+        <div >
+            <div class="control-group">
+                    <%  @tagz.each do |cat| %>
+                    <label class="control control-checkbox">
+                        <%=  cat.name %>
+                        <input type="checkbox" id="<%= cat.id  %>"/><div class="control_indicator"></div>
+                    </label>
+                    <% end %>
+                </div>
+        <br>
       </div>
     </div>
+  </div>
+  </div>
+<!-- JARRIVE FUCKING PAS A RENDER UNE LOOP -->
+            <% @places.each do |boutique|%>
+                <div id="list_show">
+                <h3></h3>
+                <hr>
+                <p></p>
+                </div>
+            <% end %>
+    </div>      
+</div>
+
