--- a/app/views/pages/category.html.erb
+++ b/app/views/pages/category.html.erb
@@ -16,6 +16,7 @@
                     <% end %>
                 </div>
         <br>
+         <%= submit_tag "Rechercher", :id => "add" %>
       </div>
     </div>
   </div>
