je veux garder ça

--- a/app/views/pages/category.html.erb
+++ b/app/views/pages/category.html.erb
@@ -24,9 +24,10 @@
 <!-- JARRIVE FUCKING PAS A RENDER UNE LOOP -->
             <% @places.each do |boutique|%>
                 <div id="list_show">
-                <h3></h3>
+                <h3>nom</h3>
                 <hr>
-                <p></p>
+                <p>address </p>
+
                 </div>
             <% end %>
     </div>      
