--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -14,7 +14,8 @@
   <%= @places_count %>
   <%end%>
 <%end%>
-<button id="maj-position" onclick="majposition();"><i class="fa fa-location-arrow"></i>  </button>
+
+<button id="maj-position" onclick="majPosition()"><i class="fa fa-location-arrow"></i>  </button>
 
 <div id='mapid'></div>
 
