contacter l'équipe lien fonctionnel

--- a/app/views/layouts/_userMenu.html.erb
+++ b/app/views/layouts/_userMenu.html.erb
@@ -17,10 +17,11 @@
       <hr class="style13">
     <%= link_to edit_user_registration_path do%> Éditer mon profil <i class="fa fa-angle-right"></i><%end%> 
       <hr class="style13">
+    <%= link_to "/contact" do %> Contacter l'équipe <i class="fa fa-angle-right"></i><%end%> 
+      <hr class="style13">
     <%= link_to "" , class: "disabled" do%><i class="fa fa-ban"></i> Changer ma ville  <i class="fa fa-angle-right"></i><%end%> 
      <hr class="style13">
-    <%= link_to "" , class: "disabled" do%><i class="fa fa-ban"></i> Contacter l'équipe <i class="fa fa-angle-right"></i><%end%> 
-      <hr class="style13">
+ 
 
       
       <br><br> <br><br><br><br> <br><br>
